# typesense-rust

./: .gitignore  README.md  compose.yml  oapi_generate.sh  openapi.yml
typesense_codegen/: .openapi-generator-ignore  Cargo.toml  README.md
typesense_codegen/.openapi-generator/: FILES
typesense_codegen/docs/: CurationApi.md  DeleteDocumentsDeleteDocumentsParametersParameter.md  DocumentsApi.md  Field.md  MultiSearchCollectionParameters.md  MultiSearchSearchesParameter.md  OperationsApi.md  OverrideApi.md  PromoteApi.md  SearchParameters.md  SearchResultHitTextMatchInfo.md
typesense_codegen/src/apis/: analytics_api.rs  collections_api.rs  configuration.rs  conversations_api.rs  curation_api.rs  debug_api.rs  documents_api.rs  health_api.rs  keys_api.rs  mod.rs  operations_api.rs  override_api.rs  presets_api.rs  promote_api.rs  stopwords_api.rs  synonyms_api.rs
typesense_codegen/src/models/: analytics_event_create_response.rs  analytics_event_create_schema.rs  analytics_rule_delete_response.rs  analytics_rule_parameters.rs  analytics_rule_parameters_destination.rs  analytics_rule_parameters_source.rs  analytics_rule_parameters_source_events_inner.rs  analytics_rule_schema.rs  analytics_rule_upsert_schema.rs  analytics_rules_retrieve_schema.rs  api_key.rs  api_key_delete_response.rs  api_key_schema.rs  api_keys_response.rs  api_response.rs  api_stats_response.rs  collection_alias.rs  collection_alias_schema.rs  collection_aliases_response.rs  collection_response.rs  collection_schema.rs  collection_update_schema.rs  conversation_model_create_schema.rs  field.rs  (+60 more)
(+15 files in other folders)
