[package]
name = "typesense_codegen"
version = "0.25.0"
authors = ["OpenAPI Generator team and contributors"]
description = "client for typesense generated with openapi spec"
edition = "2018"
license = "Apache-2.0"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4", "js"] }
tokio = { version = "1.41.1", features = ["time", "rt-multi-thread"] }

[dev-dependencies]
httpmock = "0.8.0-alpha.1"
serial_test = "*"

[dependencies.reqwest]
version = "^0.12"
features = ["json", "multipart"]
