[package]
name = "typesense_codegen"
version = "27.0.0"
authors = ["OpenAPI Generator team and contributors"]
description = "An open source search engine for building delightful search experiences."
# Override this license by providing a License Object in the OpenAPI.
license = "Apache-2.0"
edition = "2018"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
tokio = { version = "1.41.1", features = ["time", "rt-multi-thread"] }
bon = { version = "3.3" }
async-trait = "0.1.86"

[dev-dependencies]
httpmock = "0.8.0-alpha.1"
serial_test = "*"